[XForms] incorrect dup schema error message using inline schemas. Bug 350067, patch by msterlin, r=olli+aaronr